<resources>
    <string name="app_name">LiveRoom</string>
    <string name="msg_unknown_error">未知错误，请稍后重试</string>
    <string name="msg_network_error">网络异常，请稍后重试</string>

    <!--***********************直播********************************-->
    <string name="room_gift_description">送出一个%1$s</string>
    <string name="cancel">取消</string>
    <string name="commit">确定</string>
    <string name="back_room_tip">你确定退出直播吗？</string>
    <string name="share_channel_wechat">微信</string>
    <string name="share_channel_wechat_friend_circle">朋友圈</string>
    <string name="share_channel_qq">QQ</string>
    <string name="share_channel_weibo">微博</string>
    <string name="share_channel_lianjie">链接</string>
    <string name="share_channel_qzone">QQ空间</string>
    <string name="share_room_text">我在看%1$s的直播，你也快来吧！</string>
    <string name="share_title">人气火爆视频直播平台</string>


    <!-- 第一个参数为host,第二个参数为房间号-->
    <string name="room_live_finish">直播结束</string>
    <string name="room_live_finish_users_num_default">0</string>
    <string name="room_live_finish_gain">收获</string>

    <string name="charge_charge_tip">充值</string>
    <string name="charge_friend_tip">合作小伙伴们</string>
    <string name="layout_gift_continue_send_default">"连送\n%d"</string>
    <string name="recharge_text_view_residue">剩余币:</string>

    <!--  user info dialog -->
    <string name="complaint">管理</string>
    <string name="jubao">举报</string>
    <string name="pull_black">拉黑</string>
    <string name="setting_control">设置场控</string>
    <string name="userinfo_dialog_fans">粉丝</string>
    <string name="userinfo_dialog_poll">秀币</string>
    <string name="user_dialog_star">+关注</string>
    <string name="is_star">已关注</string>
    <string name="me_tell">私信</string>
    <string name="message">消息列表</string>
    <string name="room_send">发送</string>
    <string name="room_close">收起</string>
    <string name="watch_num">观看人数</string>
    <string name="room_top_tab_start">关注</string>
    <string name="this_guy_is_too_lazy_what_did_not_leave">这家伙很懒,什么也没留下!</string>
    <string name="admin_title">请选择管理类型</string>
    <string name="report_title">请选择举报类型</string>
    <string name="report_item_1">广告欺骗</string>
    <string name="lm_title">连麦申请</string>

    <!--IM-->
    <string name="jmui_username">用户名</string>

    <string name="say_something">说点什么...</string>

    <!--以下为错误码提示-->
    <string name="room_live_manage_gag">禁言</string>

    <string name="live_menu_address">直播地址</string>

    <string name="Please_wait">请稍后</string>
    <string name="small_problem">出现了点小问题,稍后重试</string>
    <string name="not_support">播放器不支持此设备</string>
    <!-- Aming 10月重构版 -->

    <string name="confirm">确定</string>

    <string name="get_host_fensi">粉丝：%1$s</string>
    <string name="apply_connect_mic">申请连线</string>


    <string name="web_socket_url">ws://%1$s:%2$s</string>

    <string name="end_publish">关闭</string>

    <string name="user_name">用户昵称</string>

    <!-- 美颜 -->
    <string name="meiyan">美颜</string>
    <string name="tiezhi">贴纸</string>
    <string name="mopi">磨皮</string>
    <string name="meibai">美白</string>
    <string name="shoulian">瘦脸</string>
    <string name="dayan">大眼</string>

    <string name="user_list">在线用户</string>

</resources>
