<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/live_finish_bg"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_room_finish_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/room_live_finish"
        android:textColor="@color/white"
        android:textSize="@dimen/sp25"/>


    <View
        android:id="@+id/finish_publish_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_room_finish_txt_title"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginTop="@dimen/dp45"
        android:background="@color/jmui_chat_detail_split_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/publish_time_total"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/finish_publish_line_1"
            android:orientation="vertical"
            >


            <TextView
                android:textSize="@dimen/sp12"
                android:textColor="@color/white"
                android:id="@+id/time"
                style="@style/live_finish_users_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1:22:22"/>


            <TextView
                android:textSize="@dimen/sp12"
                android:textColor="@color/white"
                style="@style/live_finish_users_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="直播时长"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/seepeople"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            >


            <TextView
                android:textSize="@dimen/sp12"
                android:textColor="@color/white"
                android:id="@+id/users_num"
                style="@style/live_finish_users_num1"/>

            <TextView
                android:textSize="@dimen/sp12"
                android:textColor="@color/white"
                style="@style/live_finish_users_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_num"/>
        </LinearLayout>



        <LinearLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:textSize="@dimen/sp12"
                android:textColor="@color/white"
                android:id="@+id/my_gain"
                style="@style/live_finish_users_num1"/>
            <TextView
                android:textSize="@dimen/sp12"
                android:textColor="@color/white"
                style="@style/live_finish_users_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_live_finish_gain"/>

        </LinearLayout>
    </LinearLayout>



    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/publish_and_look_num"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginTop="@dimen/dp24"
        android:background="@color/jmui_chat_detail_split_line_color"/>

    <TextView
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:id="@+id/finish"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp135"
        android:text="@string/confirm"
        android:background="@drawable/shape_finish_dialog"
        android:layout_width="335dp"
        android:layout_height="@dimen/dp40"/>

</LinearLayout>